<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_settings">Settings</string>

    <string name="pref_category_rest">Rest Client</string>
    <string name="pref_category_legal">Legal</string>
    <string name="pref_category_about">About</string>

    <string name="pref_title_follow_redirect">Follow Redirect</string>
    <string name="pref_title_consent">Personalized Ads</string>
    <string name="pref_title_privacy_policy">Privacy Policy</string>
    <string name="pref_title_about">About</string>

    <string name="pref_desc_follow_redirect">Automatically follow redirects</string>
    <string name="pref_desc_consent">Show personalized ads</string>
    <string name="pref_desc_privacy_policy">Usage terms, privacy policies</string>
    <string name="pref_desc_about">Web Developer Tools 2020</string>

</resources>